welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:27: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
  setCouleurBrosse()
                  ^MethodsPicture:43: error: not found: value color
	faireV(color.yellow)
               ^MethodsPicture:44: error: not found: value color
  faireV(color.red) 
         ^MethodsPicture:45: error: not found: value color
  faireV(color.blue) 
         ^MethodsPicture:46: error: not found: value color
  faireV(color.green) 
         ^