welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  for (i<-1 to 3) {
    faireMotif3()
    monte()
  }
}
def peinture() {
  baisseBrosse()
  leveBrosse()
	}

def faireV(c:Color) {
  avance()
  avance()
  peinture()
  avance()
 	gauche()
  avance()
  peinture()
  recule()
  droite()
  avance()
  peinture()
  avance()
  avance()
  gauche()
  setCouleurBrosse()
}

def avance5() {
  for (i<- 1 to 5) {
    avance()
  }
}

def monte() {
gauche()
avance5()
droite()
}

def faireMotif() {
	faireV(color.yellow)
  faireV(color.red) 
  faireV(color.blue) 
  faireV(color.green) 
} 

def faireMotif3 () {
  for (i <- 1 to 3) {
    faireMotif()
    avance5()
  }
}

